# AI-OKR-Tracker-Notion

./: .env.example  .gitignore  README.md  create_workspace.py  docker-compose.yml  main.py  pyproject.toml
backend/: data.sql  db.py  init_db.py  llm.py  main.py  models.py  notion_service.py  okr_service.py  pyproject.toml  requirements.txt  schemas.py
backend/agents/: blocker_agent.py  deadline_agent.py  general_agent.py  graph.py  progress_agent.py  read_agent.py  risk_agent.py  router_agent.py  team_agent.py  write_agent.py
frontend/: app.py  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/assistant/: assistant.tsx
frontend/components/dashboard/: header.tsx  metrics.tsx  okr-tabs.tsx
frontend/components/ui/: theme-toggle.tsx
frontend/lib/: api.ts
scripts/: create_mock_notion_workspace.py  init_schema.sql
